--- a/styles.css/my styles.css
+++ b/styles.css/my styles.css
@@ -28,3 +28,19 @@
     height: 800px;
     width: 635px;
 }
+.Featured{
+    text-align: center;
+    padding-top: 100px;
+    line-height: 20px;
+}
+.style{
+    height: 428px;
+    width: 310px;
+    display: inline-flex;
+    padding: 25px;
+    border: 25px;
+    flex-shrink: calc(0);
+    border-radius: 300px 300px 0 0 ;
+
+
+}
