--- a/styles.css/my styles.css
+++ b/styles.css/my styles.css
@@ -36,11 +36,11 @@
 .style{
     height: 428px;
     width: 310px;
-    display: inline-flex;
+    display: flex;
     padding: 25px;
     border: 25px;
-    flex-shrink: calc(0);
     border-radius: 300px 300px 0 0 ;
-
+    gap: 10px;
+    margin: 0%;
 
 }
