--- a/styles.css/my styles.css
+++ b/styles.css/my styles.css
@@ -14,7 +14,6 @@
         color: white;
         padding: 15px 32px;
         text-align: center;
-        text-decoration-style: dashed;
         font-size: 26px;
 }
 .banner{
@@ -41,6 +40,21 @@
     border: 25px;
     border-radius: 300px 300px 0 0 ;
     gap: 10px;
-    margin: 0%;
+    object-position: center;    
+}
+.part3{
+    width: 1440px;
+height: 220px;
+background: rgba(179, 128, 128, 0.692);
+margin-top: 215px;
+margin-left: 240px;
+text-align:center;
+display: flex;
+justify-content: center;
+padding-top: 130px;
+border-radius: 10px;
 
+}
+.delivery img{
+    align-items: center;
 }
